--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,4 +14,12 @@
   .btn-text {
     @apply bg-transparent text-black;
   }
+
+  .logo-ticker-image {
+    @apply h-8 w-auto;
+  }
+
+  .tag {
+    @apply text-sm inline-flex border border-[#222]/10 px-3 py-1 rounded-lg tracking-tight;
+  }
 }
