--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,6 @@
   }
 
   .tag {
-    @apply text-sm inline-flex border border-[#222]/10 px-3 py-1 rounded-lg tracking-tight;
+    @apply px-3 py-1 inline-flex border border-[#222]/10 rounded-lg font-medium text-sm tracking-tight;
   }
 }
